# email-ledger-poc

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  Makefile.win  README.md  build.py  credentials-example.json  dev.bat  dev.ps1  docker-compose.yml  install.py  pyproject.toml  requirements.txt  setup.py  token-example.json
scripts/: demo_data.py  reset_db.py  setup_gmail.py  test_credentials.py  test_email_processing.py  test_package.py  test_pdf_processing.py  test_recent_emails.py  verify_web_credentials.py
src/: __init__.py
src/app/: __init__.py  config.py
src/app/api/: __init__.py  app.py  routes.py
src/app/core/: __init__.py  processor.py
src/app/db/: __init__.py  migrate.py  models.py
src/app/demo/: streamlit.py
src/app/prompts/: __init__.py  expense_classification.py  financial_extraction.py
src/app/schema/: __init__.py  schemas.py
src/app/services/: __init__.py  ai_extractor.py  email_processor.py  ledger_service.py
src/cli/: __init__.py  main.py
tests/: test_attachments.py  test_basic.py
